--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-js-pagination": "^3.0.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
     "recoil": "^0.7.7",
