--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ VITE_SHOPIFY_API_KEY=8b3245fcd5c2b39c3a9996915c413440
 
 VITE_API_URL=http://localhost:3000
 VITE_APP_URL=http://localhost:3001
+VITE_ADMIN_EMAIL=anurag.makol@outlook.com
