--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 VITE_SHOPIFY_APP_PERMISSIONS=write_products,read_products,write_metaobject_definitions,read_metaobject_definitions,write_metaobjects,read_metaobjects,write_script_tags,read_script_tags
-VITE_SHOPIFY_API_KEY=8b3245fcd5c2b39c3a9996915c413440
+VITE_SHOPIFY_API_KEY=ff1cf7a0168780de1d83a7c5e856ba7e
 
-VITE_API_URL=http://localhost:3000
-VITE_APP_URL=http://localhost:3001
+VITE_API_URL=https://cartplus-api.appvertix.com
+VITE_APP_URL=https://cartplus.appvertix.com
 VITE_ADMIN_EMAIL=anurag.makol@outlook.com
