--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
+VITE_SHOPIFY_APP_PERMISSIONS=write_products,read_products,write_metaobject_definitions,read_metaobject_definitions,write_metaobjects,read_metaobjects
+VITE_SHOPIFY_API_KEY=bcb69b8f033db7820d45b297854ba21e
+
 VITE_API_URL=http://localhost:3000
 VITE_APP_URL=http://localhost:3001
 VITE_ADMIN_EMAIL=anurag.makol@outlook.com
