--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
+VITE_SHOPIFY_APP_PERMISSIONS=write_products,read_products,write_metaobject_definitions,read_metaobject_definitions,write_metaobjects,read_metaobjects
+VITE_SHOPIFY_API_KEY=ff1cf7a0168780de1d83a7c5e856ba7e
+
 VITE_API_URL=https://cartplus-api.appvertix.com
 VITE_APP_URL=https://cartplus.appvertix.com
 VITE_ADMIN_EMAIL=anurag.makol@outlook.com
