--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,7 @@
 VITE_SHOPIFY_APP_PERMISSIONS=write_products,read_products,write_metaobject_definitions,read_metaobject_definitions,write_metaobjects,read_metaobjects
 VITE_SHOPIFY_API_KEY=ff1cf7a0168780de1d83a7c5e856ba7e
+VITE_EXTENSION_ID=33711d1b-9563-4a50-9f17-ece6b9dc63c8
+VITE_EXTENSION_NAME=widget
 
 VITE_API_URL=https://cartplus-api.appvertix.com
 VITE_APP_URL=https://cartplus.appvertix.com
