Forms Integration, Integration of Static Builder for Vite

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,6 @@
-VITE_APP_URL=https://appvertix.com/
+VITE_APP_URL=https://appvertix.com
+VITE_API_URL=https://cartplus-api.appvertix.com
+
+VITE_INFO_EMAIL=info@appvertix.com
+VITE_SUPPORT_EMAIL=support@appvertix.com
+VITE_CONTACT_EMAIL=contact@appvertix.com
