--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,6 @@
-VITE_APP_URL=http://localhost:3001/
+VITE_APP_URL=http://localhost:3001
+VITE_API_URL=http://localhost:3000
+
+VITE_INFO_EMAIL=info@appvertix.com
+VITE_SUPPORT_EMAIL=support@appvertix.com
+VITE_CONTACT_EMAIL=contact@appvertix.com
