--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cartplus",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
-  "homepage": "https://AnuragMakol.github.io/anuragmakol.github.io/",
+  "homepage": "https://appvertix.com",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
