--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@ VITE_API_URL=http://localhost:3000
 VITE_INFO_EMAIL=info@appvertix.com
 VITE_SUPPORT_EMAIL=support@appvertix.com
 VITE_CONTACT_EMAIL=contact@appvertix.com
+
+VITE_CARTPLUS_URL=https://apps.shopify.com/cartplus-sticky-add-to-cart
